Fri Apr 23 19:14:34 BST 2004  Richard Boulton <richard.boulton@omsee.com>

	* Rename queryclient.php to xapian-queryclient.php, and add it to
	  Makefile.am
	* Install xapian-queryserver in $(exeprefix)/bin

Fri Apr 23 18:18:04 BST 2004  Richard Boulton <richard.boulton@omsee.com>

	* Fix to compile with gcc-2.95

Thu Apr 22 10:27:37 BST 2004  Richard Boulton <richard@tartarus.org>

        * Initial import.  Basically works, but not yet documented or
          properly tested.
