@@ -7,12 +7,11 @@ AM_CXXFLAGS = $(XAPIAN_CXXFLAGS)
 bin_PROGRAMS = xapian-queryserver
 
 php4dir = $(pkglibdir)/php4
-php4_SCRIPTS = clients/xapian-queryclient.php
+dist_php4_SCRIPTS = clients/xapian-queryclient.php
 
 # Data to install, in the usual automake way
 docdatadir   = $(datadir)/doc/xapian-queryserver
-docdata_DATA = docs/xapian-queryserver.txt
-EXTRA_DIST = $(docdata_DATA)
+dist_docdata_DATA = docs/xapian-queryserver.txt
 
 noinst_HEADERS = source/base64.h
 xapian_queryserver_SOURCES = source/queryserver.cpp source/base64.c
